Assign users to task api
