# app/Http/Controllers/Api/Tenant/TaskUserController.php
@@ -8,6 +8,8 @@ use Illuminate\Http\Response;
 use Validator;
 
 use App\Models\Task;
+use App\Models\User;
+use App\Models\TaskUser;
 
 class TaskUserController extends Controller
 {
@@ -57,18 +59,32 @@ class TaskUserController extends Controller
      *          )
      *     ),
      *     @OA\Response(
-     *          response=422,
-     *          description="Validation Response",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="status", type="boolean", example=false),
-     *              @OA\Property(property="message", type="string", example="Validation Error Message!")
-     *          )
-     *     ),
-     *     @OA\Response(
      *          response=401,
      *          description="Unauthorized Response",
      *          @OA\JsonContent(
      *              @OA\Property(property="message", type="string", example="Unauthorized!")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation Response",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status", type="boolean", example=false),
+     *              @OA\Property(property="message", type="string", example="Validation Error Message!"),
+     *              @OA\Property(property="code", type="string", example="INVALID"),
+     *              @OA\Property(
+     *                  property="errors", 
+     *                  type="object",
+     *                      @OA\Property(
+     *                  property="task_id", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                         type="string",
+     *                         example="The task_id subject is invalid."
+     *                  ),
+     *              ),
+     *                  ),
+     *              ),
      *          )
      *     ),
      * )
@@ -97,14 +113,94 @@ class TaskUserController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * 
+     * @OA\Post(
+     *     security={{"bearerAuth":{}}},
+     *     tags={"taskUsers"},
+     *     path="/tasks/{taskID}/users",
+     *     operationId="postTaskUser",
+     *     summary="Create Task User",
+     *     description="Create Task User",
+     *     @OA\Parameter(name="X-Tenant", in="header", required=true, description="Tenant ID"),
+     *     @OA\Parameter(name="taskID", in="path", required=true, description="Task ID"),
+     *     @OA\RequestBody(
+     *          required=true, 
+     *          @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="user_id", type="string", example="1", description=""),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=200, 
+     *          description="Successful Response",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status", type="boolean", example=true),
+     *              @OA\Property(property="message", type="string", example="Success Message!"),
+     *              @OA\Property(
+     *                  property="data", 
+     *                  type="object",
+     *                  @OA\Property(property="id", type="string", example="1"),
+     *                  @OA\Property(property="name", type="string", example="Hyderabad Contacts", description=""),
+     *              ),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response=401,
+     *          description="Unauthorized Response",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Unauthorized!")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation Response",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status", type="boolean", example=false),
+     *              @OA\Property(property="message", type="string", example="Validation Error Message!"),
+     *              @OA\Property(property="code", type="string", example="INVALID"),
+     *              @OA\Property(
+     *                  property="errors", 
+     *                  type="object",
+     *                      @OA\Property(
+     *                  property="task_id", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                         type="string",
+     *                         example="The task_id subject is invalid."
+     *                  ),
+     *              ),
+     *                  ),
+     *              ),
+     *          )
+     *     ),
+     * )
      */
-    public function store(Request $request)
+    public function store(Request $request, $id)
     {
-        //
+        $validator = Validator::make(['task_id' => $id] + $request->all(), [
+            'task_id' => 'required|exists:App\Models\Task,id',
+            'user_id' => 'required|exists:App\Models\User,id',
+        ]);
+        if ($validator->fails()) {
+            $this->response["code"] = "INVALID";
+            $this->response["message"] = $validator->errors()->first();
+            $this->response["errors"] = $validator->errors();
+            return response()->json($this->response, 422);
+        }
+        
+        $task = Task::find($id);
+
+        $taskUser = $task->users()->find($request->user_id);
+        if($taskUser){
+            $this->response["message"] = __('strings.store_failed');
+            return response()->json($this->response);
+        }
+
+        $task->users()->attach($request->user_id);
+
+        $this->response["status"] = true;
+        $this->response["message"] = __('strings.store_success');
+        return response()->json($this->response);
     }
 
     /**
